# kaseta

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md
.github/workflows/: ci.yml
bench/: Cargo.toml  memory.x
bench/src/: lib.rs
benches/: Cargo.toml
benches/src/: lib.rs
control/: Cargo.toml
control/src/: action.rs  button.rs  cache.rs  calibration.rs  clock.rs  control.rs  delay.rs  hysteresis.rs  led.rs  lib.rs  log.rs  mapping.rs  newlib.rs  output.rs  pot.rs  quantization.rs  save.rs  store.rs  taper.rs  trigger.rs  wow.rs  wow_flutter.rs
control/src/cache/: action.rs  clock_detector.rs  configuration.rs  display.rs  interval_detector.rs  led.rs  mod.rs  quantization.rs  tap_clock_detector.rs  tap_detector.rs
control/src/cache/reconcile/: heads.rs  hysteresis.rs  mod.rs  pre_amp.rs  speed.rs  taper.rs  tone.rs  wow_flutter.rs
control/src/input/: buffer.rs  button.rs  clock.rs  control.rs  mod.rs  pot.rs  snapshot.rs  store.rs  switch.rs
control/src/reconcile/: heads.rs  hysteresis.rs  mod.rs  pre_amp.rs  speed.rs  tone.rs  wow_flutter.rs
dsp/: Cargo.toml
dsp/benches/: bench.rs  hysteresis.rs  makeup.rs  oversampling.rs  processor.rs
dsp/src/: clipper.rs  compression.rs  compressor.rs  dc_blocker.rs  decibels.rs  delay.rs  lib.rs  linkwitz_riley_filter.rs  math.rs  memory_manager.rs  one_pole_filter.rs  oscillator.rs  pre_amp.rs  processor.rs  random.rs  ring_buffer.rs  smoothed_value.rs  state_variable_filter.rs  tone.rs  trigonometry.rs
dsp/src/delay/: compressor.rs  dc_blocker.rs  fractional.rs  mod.rs
dsp/src/hysteresis/: makeup.rs  mod.rs  processing.rs  processor.rs  signal.rs  simulation.rs
dsp/src/oversampling/: coefficients.rs  downsampling.rs  mod.rs  upsampling.rs
dsp/src/wow_flutter/: flutter.rs  mod.rs  ornstein_uhlenbeck.rs  wavefolder.rs  wow.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: lib.rs  testlib.rs
firmware/src/system/: audio.rs  leds.rs  mod.rs  randomizer.rs  storage.rs
firmware/src/system/inputs/: button.rs  cvs.rs  debounced.rs  mod.rs  multiplexer.rs  pots.rs  probe.rs  switches.rs
firmware/src/system/outputs/: impulse.rs  mod.rs
firmware/tests/: button.rs  cv.rs  impulse.rs  inputs.rs  leds.rs  outputs.rs  pots.rs  switches.rs
hack/: hysteresis.py  release.sh  release.tmpl.md  update_website.sh  wow.py
hardware/: .gitignore  Custom.kicad_sym  Module.kicad_pcb  Module.kicad_pro  Module.kicad_sch  fp-lib-table  sym-lib-table  ~Module.kicad_pro.lck
hardware/Custom.pretty/: DaisySM_4_Connfly.kicad_mod  Daisy_Patch_SM.kicad_mod  Potentiometer_Alpha.kicad_mod  Potentiometer_Alpha_RA3043F-20-20D1-B10K-01.kicad_mod  Potentiometer_Thonk_Trimmer.kicad_mod  Potentiometer_Trimmer_SongHuei.kicad_mod  Power_Connector_Connfly.kicad_mod  Preci_DIP_Switch_Socket_x10.kicad_mod
hardware/jlcpcb/: project.db
manual/: MANUAL.md
manual/user/: Makefile  manual.tex  tikz-dsp.sty  tikzlibrarydsp.code.tex
release/: notes.md
