[package]
name = "kaseta-benches"
version = "0.6.0"                                 # hack/release.sh
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"
repository = "https://github.com/zlosynth/kaseta"
publish = false

[lib]
harness = false

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
daisy = { version = "0.7", features = ["seed"] }
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
kaseta-dsp = { path = "../dsp" }

[profile.dev]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on flash
lto = true        # better optimizations
opt-level = 3     # optimize for speed

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[[bin]]
name = "oversampling"
harness = false

[[bin]]
name = "hysteresis"
harness = false

[[bin]]
name = "delay_rewind"
harness = false

[[bin]]
name = "delay_blend"
harness = false

[[bin]]
name = "wow_flutter"
harness = false

[[bin]]
name = "oscillator"
harness = false
