[package]
name = "kaseta-benches"
version = "1.1.2"                                 # hack/release.sh
authors = ["Petr Horáček <hrck@protonmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
build = "build.rs"
repository = "https://github.com/zlosynth/kaseta"
publish = false

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
daisy = { version = "0.7", features = ["seed"] }
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
kaseta-dsp = { path = "../dsp" }
kaseta-control = { path = "../control" }

[profile.dev]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on flash
lto = true        # better optimizations
opt-level = 3     # optimize for speed

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[[bin]]
name = "oversampling"
harness = false

[[bin]]
name = "hysteresis"
harness = false

[[bin]]
name = "delay_rewind"
harness = false

[[bin]]
name = "delay_blend"
harness = false

[[bin]]
name = "wow_flutter"
harness = false

[[bin]]
name = "oscillator"
harness = false

[[bin]]
name = "buffer"
harness = false

[[bin]]
name = "compressor"
harness = false
