[package]
name = "kaseta-control"
version = "0.4.0"                                # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <hrck@protonmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
kaseta-dsp = { path = "../dsp" }
libm = "0.2"
micromath = "1.1"
defmt = { version = "0.3", optional = true }
heapless = "0.7"

[dev-dependencies]
approx = "0.4"

[features]
defmt = ["dep:defmt", "heapless/defmt-impl"]
