[package]
name = "kaseta-control"
version = "1.1.2"                                # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <hrck@protonmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
kaseta-dsp = { path = "../dsp" }
libm = "0.2"
micromath = "1.1"
defmt = { version = "0.3", optional = true }
heapless = "0.7"
crc = "2"

[dev-dependencies]
approx = "0.4"

[features]
defmt = ["dep:defmt", "heapless/defmt-impl", "kaseta-dsp/defmt"]
