[package]
name = "kaseta-dsp"
version = "1.1.1"                                # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <hrck@protonmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[dependencies]
libm = "0.2"
defmt = { version = "0.3", optional = true }
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
micromath = "2.0"

[dev-dependencies]
approx = "0.4"
heapless = "0.7"
rand = "0.8"
proptest = "1.0"

[features]
defmt = ["dep:defmt", "sirena/defmt"]
