[package]
name = "kaseta-firmware"
version = "1.1.0"                                # hack/release.sh
edition = "2021"
authors = ["Petr Horáček <hrck@protonmail.com>"]
license = "GPL-3.0-or-later"
publish = false

[lib]
harness = false

[[test]]
name = "button"
harness = false # defined through defmt_test

[[test]]
name = "cv"
harness = false

[[test]]
name = "pots"
harness = false

[[test]]
name = "leds"
harness = false

[[test]]
name = "impulse"
harness = false

[dependencies]
kaseta-dsp = { path = "../dsp", features = ["defmt"] }
kaseta-control = { path = "../control", features = ["defmt"] }
sirena = { git = "https://github.com/zlosynth/sirena", rev = "0ba4c32" }
heapless = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1"
systick-monotonic = "1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32h7xx-hal = { version = "0.12", features = [
  "stm32h750v",
  "rt",
  "revision_v",
  "defmt",
] }
daisy = { version = "0.7.3", features = ["patch_sm"] }
fugit = "0.3"
nb = "1"

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on flash
lto = true        # better optimizations
opt-level = 3     # test with the same optimization as released code

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3

[[bin]]
name = "firmware"
harness = false
